[project]
name = "elevator"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Alex", email = "alex.corcoles@veecle.io"},
]
dependencies = []
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true
